<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oddpigeon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">1515901401975410</string>
    <string name="login_via_fb">Login via Fb</string>
    <string name="location">location</string>
    <string name="gender">gender</string>
    <string name="date_of_birth">dob</string>
    <string name="relationship">Relationship</string>
    <string name="logout">logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tutorial_text_3">next is login screen</string>
    <string name="tutorial_text_2">next is tutorial screen 3</string>
    <string name="tutorial_text_1">next is tutorial screen 2</string>
    <string name="signup_button">SignUp</string>
    <string name="title_activity_interested_in">InterestedInActivity</string>
    <string name="interested_in_question">Interested in dating</string>

    <string-array name="interested_in_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="done">Done</string>
    <string name="create_open_circle">Create Open Circle</string>
    <string name="create_closed_circle">Create Closed Circle</string>
    <string name="title_activity_create_community">CreateCommunityActivity</string>
    <string name="create_circle">Create Circle</string>
    <string name="circle_name">Circle Name</string>
    <string name="upload_circle_photo">Upload Cover Photo</string>
    <string name="circle_rules">Circle Rules</string>
    <string name="create_circle_hint_1">People in their 20\'s</string>
    <string name="app_label">oddpigeon</string>
    <string name="search_hint">Search oddpigeon</string>
    <string name="title_activity_searchable">SearchableActivity</string>

</resources>
